--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
-  "dependencies": {
-    "dotenv": "^17.2.3",
-    "ejs": "^3.1.10",
-    "express": "^5.2.1",
-    "mysql2": "^3.15.3",
-    "path": "^0.12.7"
-  }
+  "name": "api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/MANTM1224/API.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "module",
+  "bugs": {
+    "url": "https://github.com/MANTM1224/API/issues"
+  },
+  "homepage": "https://github.com/MANTM1224/API#readme"
 }
