--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/MANTM1224/API/issues"
   },
-  "homepage": "https://github.com/MANTM1224/API#readme"
+  "homepage": "https://github.com/MANTM1224/API#readme",
+  "dependencies": {
+    "dotenv": "^17.2.3",
+    "ejs": "^3.1.10",
+    "express": "^5.2.1",
+    "mysql2": "^3.15.3"
+  }
 }
